# text-translator-server

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: load_ollama_test.py  test_g2p_csv.py  test_g2p_ja.py  test_g2p_prosody.py
src/: main.py
src/api/: index.py
src/api/routes/: translate.py
src/nlp_server/: main.py
src/nlp_server/api/: router.py
src/nlp_server/api/routes/: g2p.py  ollama.py
src/nlp_server/infra/: __init__.py
src/nlp_server/infra/worker/: __init__.py  config.py  dispatch.py  errors.py  session.py
src/nlp_server/schemas/: g2p.py  translate.py
src/nlp_server/services/: ollama.py
src/nlp_server/services/g2p/: README.md  __init__.py  csv_batch.py  japanese.py  normalize.py  validation.py
src/nlp_server/services/g2p/constants/: symbols2.py
src/nlp_server/services/g2p/ja/: default.py  prosody.py
src/nlp_server/services/g2p/utils/: prosody_g2p.py  symbol_alignment.py
src/nlp_server/utils/: __init__.py  paths.py
src/services/: translate.py
src/text_translator_server/: main.py
src/text_translator_server/api/: deps.py  index.py  router.py
src/text_translator_server/api/routes/: ollama.py  translate.py
src/text_translator_server/config/: index.py  settings.py
src/text_translator_server/schemas/: translate.py
src/text_translator_server/services/: ollama.py  translate.py
tests/: test_worker_dispatch.py
workers/: registry.toml  run_worker.py
workers/github/gitycc/g2pw/: pyproject.toml  smoke_test.py
workers/github/gitycc/g2pw/src/g2pw_worker/: __init__.py  cli.py  download.py  infer.py  runtime.py  serve.py
